--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for NetHack-Item
 
 0.02
+        Too much to list, biggest is addition of subtypes and plenty of
+            internals cleanup
 
 0.01    Fri Jul 04 07:42:41 2008
         First version, released on an unsuspecting world.
