--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for NetHack-Item
 
-0.21
+0.21    Dec 10 2013
         Disambiguate cost and nutrition into *_each and total_* (Sartak)
+        Fix Moose compat issue (doy)
 
 0.20    Jul 20 2013
         Potion dilution management (Sartak)
